Log of Changes to CGIwrap:
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
Changes since 3.3:
   Fixed typo "&" instead of "&&" in setgroups stuff
   Added cgiwrap.aliases option to rewrite home dirs of users.
   Moved entire cgiwrap source build tree to CVS, will make tracking
	changes easier.
   CGIwrap now changes directories to the directory the script is located
	in before executing the script. Before, it always just changed
	to the main CGI directory. This behavior is only different if you
	were using scripts in subdirectories.
   Changed style of cgiwrap.allow, cgiwrap.deny files to be the same as
	cron's allow/deny files.

Changes since 3.24:
   Added support for attaching a label to syslog log messages.
   Added code to rewrite the PATH_TRANSLATED environment variable.

Changes since 3.23:
   Added support for logging to syslog.

Changes since 3.22:
   Setgroups was being used no matter what you said in configure - fixed
   Problem with undefined variables in Log call for subdirectories - fixed
   Removed declaration of sys_errlist, and errno in util.c, since I don't 
think they were necessary. And they were causing problems on some 
architectures.
   Added in user contributed host address checking code
   Upgraded to using dist-3.0 PL60 for building the Configure script.
   Separated initgroups() and setgroups() checks into two separate 
defines, and improved documentation in configure script for these options.

Changes since 3.21:
   argv[0] is now automatically changed to the name of the script that is
being executed

Changes since 3.2:
   Rlimit defines weren't set properly when rlimit not available - fixed
   The optimizer/debugger flag wasn't being used in the makefile -- fixed
   Defaults for checks (y/n) were not being set - fixed
   
Changes since 3.11:
   MAJOR code cleanup and simplification. The code should be ALOT easier to 
read and understand.