@@ -1,5 +1,9 @@
 Log of Changes to CGIwrap:
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+Changes since 3.4:
+   Fixed strerror checking in Configure script and util.c for systems without
+   strerror, can now use strerror, sys_errlist, perror, or just errno.
+
 Changes since 3.3:
    Fixed typo "&" instead of "&&" in setgroups stuff
    Added cgiwrap.aliases option to rewrite home dirs of users.
